--- a/D3_Test_Draft1.html
+++ b/D3_Test_Draft1.html
@@ -53,7 +53,7 @@ var svg = d3.select("body").append("svg")
           "translate(" + margin.left + "," + margin.top + ")");
 
 // get the data
-d3.csv("data.csv", function(error, data) {
+d3.csv("https://docs.google.com/spreadsheets/d/19mXcOgu_aelG51PDLWpso4maSEjbGwRjiCYEIz6IxR8", function(error, data) {
   if (error) throw error;
 
   // format the data
